# Sheets-finance-tracker-PWA

./: .gitignore  Cargo.toml  README.md  Shuttle.toml
.github/workflows/: main.yml
src/: api.rs  errors.rs  forms.rs  main.rs  sheets_service.rs
src/models/: decimal.rs
static/: manifest.json
templates/: base.html  index.html  status.html  transaction-form.html
