[package]
name = "kkobau-finance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.2"
shuttle-axum = { version = "0.35.2", default-features = false, features = ["axum-0-7"] }
shuttle-runtime = "0.35.2"
tokio = "1.35.1"
tracing = "0.1.40"

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"