[package]
name = "kkobau-finance-app"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
fraction = "0.15.0"
validator = { version = "0.16.1", features = ["derive"] }
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
shuttle-secrets = "0.36.0"
tokio = "1.35.1"
tracing = "0.1.40"
tower-http = { version = "0.5.0", features = ["fs"] }

askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"

google-sheets4 = "5.0.3+20230119"
base64 = "0.21.5"
anyhow = "1.0.77"